My first modificatin!

--- a/Git_Example1.html
+++ b/Git_Example1.html
@@ -4,8 +4,8 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <p>
-      This is my Git Example!
+    <p>S
+      This is my Git Example! And now I modified it!
     </p>
   </body>
 </html>
