--- a/Git_Example1.html
+++ b/Git_Example1.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
   <head>
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
     <p>
-      This is my Git Example!
+      This is my Git Example! And now I modified it - from Home!
     </p>
   </body>
 </html>
